Start of Past Papers

--- a/OOP2/OOP2.html
+++ b/OOP2/OOP2.html
@@ -15,6 +15,6 @@
         Petter Olsen: <li id="3311"></li>
     </div>
     <div id="output"></div>
-    <script src="OOP2.js"></script>
+    <script type="module" src="OOP2.js"></script>
 </body>
 </html>
